--- a/style.css
+++ b/style.css
@@ -82,6 +82,24 @@ body{
 .random-images{
     margin-top: 30px;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+}
+
+.random-images .image-container.img1{
+    grid-row: 1/3;
+    grid-column: 3/5;
+}
+
+.random-images .image-container.img2{
+    grid-row: 3/5;
+    grid-column: 3/5;
+}
+.random-images .image-container.img3{
+    grid-row: 4/5;
+    grid-column: 3/2;
+}
+.random-images .image-container.img4{
+    grid-row: 4/5;
+    grid-column: 3/4;
 }
